compiler/test_files/typing/bad/testfile-redef-6.psc
class S { i32 a; };
i32 f() {}
S f() {}
i32 main() {}
